# OpenCut

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  open-next.config.ts  package.json  turbo.json  wrangler.jsonc  wrangler.toml
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md
.github/workflows/: bun-ci.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/mobile/: app.json  package.json
apps/web/: .env.example  drizzle.config.ts  next.config.ts  package.json
apps/web-vite/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
docs/: architecture-flows.html  architecture-flows.json  improvement-plan.md  migration-plan.md  spec-workflow.md  vibe-app-integrity-audit.skill.md
rust/: README.md
rust/crates/keyframe/: Cargo.toml
rust/crates/keyframe/src/: evaluator.rs  lib.rs  types.rs
scripts/: patch-fdir.mjs
specs/: README.md
specs/agent-skills-install/: design.md  requirements.md  tasks.md
specs/ai-copilot-transcript-context/: design.md  requirements.md  tasks.md
specs/ai-features/: design.md  requirements.md  tasks.md
specs/audio-analysis/: design.md  requirements.md  tasks.md
specs/background-removal/: design.md  requirements.md  tasks.md
specs/blend-modes-expansion/: design.md  requirements.md  tasks.md
specs/broll-suggestions/: design.md  requirements.md  tasks.md
specs/command-palette/: design.md  requirements.md  tasks.md
specs/export-engine-improvements/: design.md  requirements.md  tasks.md
specs/frame-caching-system/: design.md  requirements.md  tasks.md
(+667 files in other folders)
