[package]
name = "opencut-desktop"
version = "0.2.0"
edition = "2021"
description = "StratosCut Desktop — native video editor with WebGPU compositor"

[[bin]]
name = "opencut"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
dirs = "5"
notify = "6"

[features]
default = ["web-view"]
web-view = []
