[package]
name = "keyframe"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tsify-next = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
proptest = "1.6"

[features]
wasm = ["dep:wasm-bindgen", "dep:tsify-next", "tsify-next/js"]
